--- a/estilos.css
+++ b/estilos.css
@@ -18,3 +18,29 @@
     font-size: 40px;
     text-align: right;
 }
+
+.contenedor-portada {
+    display: flex;
+    justify-content: center;
+    gap:50px;
+
+}
+.card {
+  background:#fff;
+  border:1px solid #e5e7eb;
+  border-radius:.75rem;
+  overflow:hidden;
+  max-width:320px
+}
+.card img {
+  width:100%;
+  height:auto;
+  display:block
+}
+.card h3 {
+  margin:8px 12px
+}
+.card p {
+  margin:0 12px 12px;
+  color:#6b7280
+}
